# place-italian-left-unity

./: .gitignore  README.md
scripts/: Cargo.toml
scripts/readme_generator/: Cargo.toml  template_README.md
scripts/readme_generator/src/: main.rs  wplace_art_data.rs  wplace_template_image_read.rs
scripts/stat_generator/: Cargo.toml  art
scripts/stat_generator/src/: art_data.rs  color.rs  main.rs
scripts/wplace_area_info_grabber/: Cargo.toml  areas  areas.md
scripts/wplace_area_info_grabber/src/: inputs_processor.rs  main.rs
scripts/wplace_common/: Cargo.toml  art  art.md  griefer_list  griefer_list.md
scripts/wplace_common/src/: art_data.rs  color.rs  griefer_data.rs  lib.rs  tile_coords.rs
scripts/wplace_grief_checker/: Cargo.toml
scripts/wplace_grief_checker/src/: grief_checker.rs  main.rs
scripts/wplace_stat_generator/: Cargo.toml  art  art.md  template_README.md
scripts/wplace_stat_generator/src/: art_data.rs  main.rs  template_image_read.rs
