[workspace]
resolver = "3"
members = ["readme_generator", "wplace_area_info_grabber","wplace_common", "wplace_grief_checker"]

[workspace.lints.clippy]
duplicate_mod = "deny"
fn_to_numeric_cast_any = "deny"
manual_string_new = "deny"
needless_borrow = "deny"
semicolon_if_nothing_returned = "warn"
string_to_string = "deny"
too_many_arguments = "allow"

[workspace.lints.rust]
unused_imports = "warn"

